# hatespeech-detection

./: .gitignore  .gitmodules  MultiModN_pipeline.ipynb  Practice_7_multimodal_pipeline.ipynb  README.md  dataset_script_download.sh  mmhs_dataset_exploration.ipynb  move_checkpoints.sh  pyproject.toml  vilioexample-nb.ipynb
MultiModN/: .gitignore  README.md  requirements-cpu.txt  requirements-gpu.txt
MultiModN/docker_img/: Dockerfile  requirements.txt
MultiModN/multimodn/: history.py  multimodn.py
MultiModN/pipelines/: utils.py
app/: README.md  aaron.jsonl  alix.jsonl  annotations.jsonl  check_annotations.py  dataset_labeler.py  fab.jsonl  plot_aggrement.py  pyproject.toml
app/mmn-run-1/: val_preds_epoch00.csv  val_preds_epoch10.csv
app/mmn-run-7/: val_preds_epoch05.csv  val_preds_epoch10.csv  (+4 more)
env_requirements/: environment.yml
llm_detection/: .dockerignore  Dockerfile  InstructBLIP_finetuning.py  InstructBLIP_job.sh  LlaVA_finetuning.py  Llava_inference.py  Llava_inference_Lightning_Inference.py  RCP_LLM_inference.py  RCP_LLM_inference_with_score.py  README.md  balanced-llava.json  chat_test.py  check_labels.py  compute_metrics.py  llava_job.sh  main.py  model_to_try.txt  parse_jsonlgz_file.py  plot_aggrement.py  plot_graphs.py  process_inputs.py  process_inputs_mpi.py  process_inputs_multiprocessing.py  pyproject.toml  requirements.txt  show_rcp_llm_extremes.py  temp.py  test.py  verify_outputs.py  verify_processed_inputs.py
notebooks/: README.md  mmhs_dataset_exploration.ipynb  random_classifier.ipynb  rebalance_dataset.ipynb  vilioexample-nb.ipynb
(+38 files in other folders)
