[project]
name = "llm-detection"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mpi4py>=4.0.3",
    "numpy>=2.2.5",
    "openai>=1.76.2",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "zstandard>=0.23.0",
]
