[project]
name = "llm-detection"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "aiofiles>=24.1.0",
    "argcomplete>=3.6.2",
    "bitsandbytes>=0.45.5",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mpi4py>=4.0.3",
    "numpy>=2.2.5",
    "openai>=1.76.2",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "plotly>=6.1.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "wandb>=0.19.11",
    "zstandard>=0.23.0",
]
